update swagger.yaml
